force-app/main/default/objects/Project_User_Story__c/Project_User_Story__c.object-meta.xml
<CustomObject>
    <label>Project User Story</label>
    <nameField>
        <label>Project User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>