force-app/main/default/objects/Project_User_Story__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Volunteer to whom this user story is assigned.</description>
    <label>Assigned to</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CFFMembers__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Volunteer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CFFMembers__c</referenceTo>
    <relationshipLabel>Project User Stories</relationshipLabel>
    <relationshipName>Project_User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>