force-app/main/default/objects/Project_User_Story__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>States the directives for the user story</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>