force-app/main/default/objects/Project_User_Story__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Due date of a user story</description>
    <label>Due Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>