force-app/main/default/objects/Project_User_Story__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The end date and time of a user story</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>