force-app/main/default/objects/Project_User_Story__c/fields/Project_Order__c.field-meta.xml
<CustomField>
    <fullName>Project_Order__c</fullName>
    <label>Project Order</label>
    <referenceTo>Project_Order__c</referenceTo>
    <relationshipLabel>Project User Stories</relationshipLabel>
    <relationshipName>Project_User_Stories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>