force-app/main/default/objects/Project_User_Story__c/fields/Project_Phase_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Project_Phase_Sprint__c</fullName>
    <label>Project Phase/Sprint</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Phase_Sprint__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Phase_Sprint__c</referenceTo>
    <relationshipLabel>Project User Stories</relationshipLabel>
    <relationshipName>Project_User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>