force-app/main/default/objects/Project_User_Story__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date and Time for a User Story</description>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>