force-app/main/default/objects/Project_User_Story__c/validationRules/DueDateCannotBeEarlierThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDateCannotBeEarlierThanStartDate</fullName>
    <active>true</active>
    <description>The Due Date of a user story cannot be equal to or earlier than its Start Date</description>
    <errorConditionFormula>Start_Date__c  &gt;=  Due_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>The Due Date of a user story cannot be equal to or earlier than its Start Date</errorMessage>
</ValidationRule>