force-app/main/default/objects/Project_User_Story__c/validationRules/EndDateCannotBeEarlierThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateCannotBeEarlierThanStartDate</fullName>
    <active>true</active>
    <description>The End Date of a User Story cannot be equal to or earlier than its Start Date</description>
    <errorConditionFormula>Start_Date__c  &gt;=  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The End Date of a User Story cannot be equal to or earlier than its Start Date</errorMessage>
</ValidationRule>