force-app/main/default/objects/Project_User_Story__c/validationRules/StartDateCannotBeEarlierSprintStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateCannotBeEarlierSprintStartDate</fullName>
    <active>true</active>
    <description>Start date of an user story cannot be earlier than the start date of the project sprint which it belongs.</description>
    <errorConditionFormula>DATEVALUE(Start_Date__c)  &lt;  Project_Phase_Sprint__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date of an user story cannot be earlier than the start date of the project sprint which it belongs.</errorMessage>
</ValidationRule>